WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268618
[UnifiedPDF] PDFPluginBase should notify the web page of selection changes
https://bugs.webkit.org/show_bug.cgi?id=268618
Summary
[UnifiedPDF] PDFPluginBase should notify the web page of selection changes
Abrar Rahman Protyasha
Reported
2024-02-02 04:46:35 PST
In anticipation of selection tracking support in UnifiedPDFPlugin, let's factor out PDFPlugin::notifySelectionChanged into a common space.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-02 04:46:45 PST
<
rdar://problem/122179410
>
Abrar Rahman Protyasha
Comment 2
2024-02-02 10:19:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23755
EWS
Comment 3
2024-02-02 11:56:35 PST
Committed
274005@main
(749aa4442b2f): <
https://commits.webkit.org/274005@main
> Reviewed commits have been landed. Closing PR #23755 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug