[UnifiedPDF] PDFPluginBase should notify the web page of selection changes https://bugs.webkit.org/show_bug.cgi?id=268618 rdar://122179410

Reviewed by Simon Fraser.

In anticipation of selection tracking support in UnifiedPDFPlugin, this
patch factors out PDFPlugin::notifySelectionChanged into a common space.

We also take the liberty to drop the PDFSelection argument to
notifySelectionChanged, given that it was not being read or passed to the
web page by the PDF plugin.

Lastly, we add a WebFrame::protectedCoreLocalFrame getter to better
abide by our smart pointer rules, where we protect both the objects on
which we call non-trivial member functions, and parameters we pass to
such functions.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(-[WKPDFLayerControllerDelegate pdfLayerController:didChangeSelection:]):
(WebKit::PDFPlugin::notifySelectionChanged): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::notifySelectionChanged):
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::protectedCoreLocalFrame const):
* Source/WebKit/WebProcess/WebPage/WebFrame.h:

Canonical link: https://commits.webkit.org/274005@main